    - Removed unused bitmaps from demo.
  
  - New Features:
    - Added packedfonts example.
    - Added dozens of packed fonts.
    - Replaced font pointer in gadget constructors with a pointer to a
      GadgetStyle object.
    - Changed default font to NewTopaz.
    - Added old system font under the name Topaz using the same class pattern as
      the TinyFont.
  

  V0.42 (20091205)

  - Fixes:
    - ListData::swapItems() no longer raises a data changed event.
    - ListData::sort() raises a data changed event.
    - Woopsi class does not attempt to retrieve system font before it is
      initialised.
    - ListBox canvas height no longer includes extra pixel.
    - ListBox raises an action event when double-clicked.
    - ListBox ignores double-clicks that occur across multiple items.
    - Removed unused Gadget::_doubleClickTime member.
    - ListBox redraws every time data changes.
    - Double-click only counted as such if the gadget already has focus (ie.
      must be the same gadget clicked twice).
    - ListBox::draw() calculates top and bottom visible options correctly, and
      does not overwrite options at the top of the list with those from the
      bottom.
    - ListBox automatically scrolls when items are removed from the ListData
      object to ensure it does not display past the end of the canvas.
  
  - New Features:
    - Split ListData class into ListData and ListDataItem classes for greater
      flexibility.
    - Minor improvements to the ListBox's use of the ListData class.
    - Altered ListData::quickSort() and added compareTo() method to ListDataItem
      to allow custom ordering of ListDataItem subclasses.
    - ScrollingBase adds support for specifying planes on which scrolling can
      occur.
    - ScrollingPanel implements ScrollingBase's allow/disallow scroll plane
      features to prevent scrolling on certain planes.
    - ListBox does not allow horizontal scrolling.
    - Added windowless example project.