@@ -1,0 +1,14 @@
+#ifndef _DEFAULT_STYLE_DEMO_H_
+#define _DEFAULT_STYLE_DEMO_H_
+
+#include "woopsi.h"
+
+using namespace WoopsiUI;
+
+class DefaultStyleDemo : public Woopsi {
+public:
+	void startup();
+	void shutdown();
+};
+
+#endif
