@@ -1,0 +1,9 @@
+// Includes
+#include "defaultstyledemo.h"
+
+int main(int argc, char* argv[]) {
+
+	// Create the Hello World application
+	DefaultStyleDemo app;
+	return app.main(argc, argv);
+}
